- **Sequential UC processing** with mutex to prevent race conditions
- **Enhanced round tracking** showing both partition and root rounds
- **Configurable round duration** via ROUND_DURATION environment variable

### Technical improvements:
1. **Repeat UC detection** (`internal/bft/client.go`):
   - Added `isRepeatUC` method that compares InputRecords
   - Detects when root chain sends same UC with higher root round
   - Clears proposed blocks and starts new round on repeat UC
   - Prevents stuck rounds when root chain times out

2. **Sequential UC processing**:
   - Added `ucProcessingMutex` to BFTClientImpl
   - Ensures only one UC is processed at a time
   - Prevents race conditions during round transitions
   - Maintains consistent state during concurrent UC arrivals

3. **Enhanced round tracking**:
   - Added `lastRootRound` tracking to monitor root chain rounds
   - Enhanced logging to show both partition and root rounds
   - Better visibility into synchronization status
   - Helps diagnose timing issues between chains

4. **Configurable round duration**:
   - Added `RoundDuration` to ProcessingConfig
   - Configurable via `ROUND_DURATION` environment variable
   - Defaults to 1 second (same as before)
   - Allows tuning for different network conditions

### Testing results:
- Docker compose deployment successful
- Service runs with all improvements active
- Performance test shows 990 RPS throughput
- All 9900 test commitments successfully processed
- No sync errors or repeat UC issues observed
- Stable block production at 1 block/second

### Benefits:
- More robust handling of root chain timeouts
- Better synchronization under heavy load
- Clear diagnostics for timing issues
- Prevents commitment loss from race conditions
- Configurable timing for different deployments

This completes the implementation of improvements identified from the BFT core
analysis, significantly enhancing the aggregator's reliability and synchronization
with the root chain.